<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tvContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/noto_sans_cjkkr_light"
        android:gravity="start"
        android:text="@string/content_str"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/noto_sans_cjkkr_light"
        android:text="@string/created_at_str"
        android:textColor="@color/colorGray"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/tvContent"
        app:layout_constraintTop_toBottomOf="@+id/tvContent" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:src="@color/colorBlack"
        app:layout_constraintStart_toStartOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <TextView
        android:id="@+id/tvNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:fontFamily="@font/noto_sans_medium"
        android:text="@string/nickname_str"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivProfileImage"
        app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
        app:layout_constraintTop_toTopOf="@+id/ivProfileImage" />

    <TextView
        android:id="@+id/tvParenthesesOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:fontFamily="@font/noto_sans_light"
        android:text="@string/parentheses_open_str"
        android:textColor="@color/colorBlack"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvNickname"
        app:layout_constraintStart_toEndOf="@+id/tvNickname"
        app:layout_constraintTop_toTopOf="@+id/tvNickname" />

    <TextView
        android:id="@+id/tvJobField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:fontFamily="@font/noto_sans_light"
        android:text="@string/job_field_str"
        android:textColor="@color/colorBlack"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvParenthesesOpen"
        app:layout_constraintStart_toEndOf="@+id/tvParenthesesOpen"
        app:layout_constraintTop_toTopOf="@+id/tvParenthesesOpen"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:fontFamily="@font/noto_sans_light"
        android:text="@string/slash_str"
        android:textColor="@color/colorBlack"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvJobField"
        app:layout_constraintStart_toEndOf="@+id/tvJobField"
        app:layout_constraintTop_toTopOf="@+id/tvJobField" />

    <TextView
        android:id="@+id/tvExperienceYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:fontFamily="@font/noto_sans_light"
        android:text="@string/experience_str"
        android:textColor="@color/colorBlack"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
        app:layout_constraintStart_toEndOf="@+id/tvSlash"
        app:layout_constraintTop_toTopOf="@+id/tvSlash" />

    <TextView
        android:id="@+id/tvSlash2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:fontFamily="@font/noto_sans_light"
        android:text="@string/slash_str"
        android:textColor="@color/colorBlack"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvExperienceYears"
        app:layout_constraintStart_toEndOf="@+id/tvExperienceYears"
        app:layout_constraintTop_toTopOf="@+id/tvExperienceYears"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvWorkingArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:fontFamily="@font/noto_sans_light"
        android:text="@string/working_area_str"
        android:textColor="@color/colorBlack"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSlash2"
        app:layout_constraintStart_toEndOf="@+id/tvSlash2"
        app:layout_constraintTop_toTopOf="@+id/tvSlash2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvParenthesesClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:fontFamily="@font/noto_sans_light"
        android:text="@string/parentheses_close_str"
        android:textColor="@color/colorBlack"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvWorkingArea"
        app:layout_constraintStart_toEndOf="@+id/tvWorkingArea"
        app:layout_constraintTop_toTopOf="@+id/tvWorkingArea" />

    <Button
        android:id="@+id/btnCommentAdd"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_stroke_no"
        android:fontFamily="@font/noto_sans_light"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/post_up_comment_str"
        android:textColor="@color/colorGray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvNickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvNickname" />

    <View
        android:id="@+id/vComment"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfileImage" />
</androidx.constraintlayout.widget.ConstraintLayout>